[gd_scene format=3 uid="uid://c4j32prrogray"]

[ext_resource type="Script" uid="uid://c3n5gg4kaoeld" path="res://scenes/students/student.gd" id="1_4orpo"]
[ext_resource type="Texture2D" uid="uid://bwi8bwxynmh7u" path="res://assets/students/guy1.png" id="2_txaf7"]
[ext_resource type="PackedScene" uid="uid://comgbjh65362c" path="res://scenes/students/student_tooltip.tscn" id="3_fahmq"]

[node name="Student" type="Control" unique_id=386882928]
layout_mode = 3
anchor_left = 0.2
anchor_top = -0.15
anchor_right = 1.2
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4orpo")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1081342365]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_txaf7")
stretch_mode = 5

[node name="HpContainer" type="HBoxContainer" parent="." unique_id=1987645780]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = -0.2
anchor_right = 0.75
anchor_bottom = -0.1

[node name="Student_Tooltip" parent="." unique_id=813405298 instance=ExtResource("3_fahmq")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
